--- a/RealWebsite/css/styles.css
+++ b/RealWebsite/css/styles.css
@@ -6,6 +6,14 @@ body {
 }
 
 
+@media(min-width: 992px){
+.container {
+	position: relative;
+	right: 30px;
+}
+}
+
+
 
 #header-nav {
 	background-color: #f6b319;
@@ -22,8 +30,48 @@ body {
 
 button { 
 position: absolute;
-right: 0px;
+right: 5px;
 top: 20px; }
+
+#collapsable-nav {
+
+    position: absolute;
+    top: 15px;
+    right:10px;
+	flex-basis: auto;
+	flex-grow: 0;
+}
+
+#collapsable-nav1 {
+ padding-right: 15px;
+}
+
+.nav-item a {
+	color: #951C49;
+	text-align: center;
+}
+
+.nav-item a:hover {
+    background: #E7E7E7;
+}
+
+.nav-item a i {
+	font-size: 1.8em;
+}
+
+#phone a{
+	font-size: 1.8em;
+	text-align: right;
+	padding-bottom: 0;
+}
+
+#phone div {
+	color: #557c3e;
+	text-align: right;
+	padding-right: 15px;
+}
+
+ 
 
 
 .navbar-brand h1 { /* Restaurant name */
@@ -51,4 +99,12 @@ top: 20px; }
 }
 .navbar-brand p span { /* Star-K */
   vertical-align: middle;
+}
+
+
+button.navbar-toggler, span.navbar-toggler-icon {
+
+
+	color: #61122f;
+  
 }
