--- a/RealWebsite/css/styles.css
+++ b/RealWebsite/css/styles.css
@@ -108,3 +108,25 @@ button.navbar-toggler, span.navbar-toggler-icon {
 	color: #61122f;
   
 }
+
+@media (max-width: 767px) {
+  /* Header */
+  .navbar-brand {
+    height: 80px;
+  }
+  .navbar-brand h1 { /* Restaurant name */
+    font-size: 5vw; /* 1vw = 1% of viewport width */
+  }
+  .navbar-brand p { /* Kosher cert */
+    font-size: .6em;
+    margin-top: 12px;
+  }
+  .navbar-brand p img { /* Star-K */
+    height: 20px;
+  }
+
+  #collapsable-nav1 li {
+
+     font-size: 0.7em;
+   
+  }
