--- a/RealWebsite/css/styles.css
+++ b/RealWebsite/css/styles.css
@@ -86,9 +86,10 @@ top: 20px; }
   line-height: .75;
 }
 
-.navbar-brand a:hover, .navbar-brand a:focus {
+.navbar-brand a {
   text-decoration: none;
 }
+
 
 
 .navbar-brand p { /* Kosher cert */
@@ -109,13 +110,111 @@ button.navbar-toggler, span.navbar-toggler-icon {
   
 }
 
+ .jumbotron {
+  	margin-top: 10px;
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  background-color: #e9ecef;
+  border-radius: .3rem;
+}
+
+#menu-tile, #specials-tile, #map-tile {
+  height: 250px;
+  width: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+}
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-tile {
+  background: url('../images/menu-tile.jpg') no-repeat;
+  background-position: center;
+}
+#specials-tile {
+  background: url('../images/specials-tile.jpg') no-repeat;
+  background-position: center;
+}
+
+#menu-tile span, #specials-tile span, #map-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
+	.jumbotron {
+		margin-bottom: 0;
+	}
+}
+
+@media (min-width: 1200px) {
+  .container .jumbotron {
+    background: url('../images/jumbotron_1200.jpg') no-repeat;
+    height: 675px;
+    background-size: 100%;
+  }
+
+  #menu-tile, #specials-tile {
+   background-size: 100%;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+
+  /* Home Page */
+  .container .jumbotron {
+    background: url('../images/jumbotron_992.jpg') no-repeat;
+    height: 558px;
+  }
+  /* End Home Page */
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  /* Home Page */
+  .container .jumbotron {
+    background: url('../images/jumbotron_768.jpg') no-repeat;
+    height: 432px;
+  }
+  /* End Home Page */
+
+}
+
+
 @media (max-width: 767px) {
   /* Header */
+
+  #call-btn > a {
+    font-size: 1.5em;
+    display: block;
+    margin: 20px 20px;
+    padding: 10px;
+    border: 2px solid #fff;
+    background-color: #f6b319;
+    color: #951c49;
+  }
+  #xs-deliver {
+    margin-top: 5px;
+    font-size: .7em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+  }
+
   .navbar-brand {
     height: 80px;
   }
   .navbar-brand h1 { /* Restaurant name */
-    font-size: 5vw; /* 1vw = 1% of viewport width */
+    font-size: 4vw; /* 1vw = 1% of viewport width */
   }
   .navbar-brand p { /* Kosher cert */
     font-size: .6em;
@@ -130,3 +229,35 @@ button.navbar-toggler, span.navbar-toggler-icon {
      font-size: 0.7em;
    
   }
+   .container .jumbotron {
+    margin-top: 30px;
+    padding: 0;
+  }
+
+   
+  @media (max-width: 575px) {
+  	#menu-tile, #specials-tile {
+    width: 360px;
+    margin: 0 auto 15px;
+  }
+  }
+
+  
+
+}
+
+@media (max-width: 479px) {
+  /* Header */
+  .navbar-brand h1 { /* Restaurant name */
+    padding-top: 5px;
+    font-size: 6vw;
+  }
+  /* End Header */
+  
+  /* Home page */
+  #menu-tile, #specials-tile {
+    width: 280px;
+    margin: 0 auto 15px;
+  }
+
+
