--- a/RealWebsite/css/styles.css
+++ b/RealWebsite/css/styles.css
@@ -152,6 +152,69 @@ button.navbar-toggler, span.navbar-toggler-icon {
   opacity: .8;
 }
 
+ .card-footer {
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
+}
+.card-footer div.row {
+  margin-bottom: 35px;
+}
+
+#hours, #address {
+  line-height: 2;
+}
+#hours > span, #address > span {
+  font-size: 1.3em;
+}
+#address p {
+  color: #557c3e;
+  font-size: .8em;
+  line-height: 1.8;
+}
+#testimonials {
+  font-style: italic;
+}
+#testimonials p:nth-child(2) {
+  margin-top: 25px;
+}
+
+
+
+
+.category-tile { 
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto 15px;
+}
+.category-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
+.category-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-categories-title + div {
+  margin-bottom: 50px;
+}
+
+
+
+
 @media (min-width: 1200px) and (max-width: 1400px) {
 	.jumbotron {
 		margin-bottom: 0;
@@ -233,6 +296,21 @@ button.navbar-toggler, span.navbar-toggler-icon {
     margin-top: 30px;
     padding: 0;
   }
+
+  .card-footer section {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .card-footer section:nth-child(3) {
+    margin-bottom: 0; /* margin already exists on the whole row */
+  }
+  .card-footer section hr {
+    margin: auto;
+    width: 50%;
+    margin-top: 15px;
+  }
+}
+ 
 
    
   @media (max-width: 575px) {
